--- a/editor.html
+++ b/editor.html
@@ -243,7 +243,7 @@
         delete articles[editId];
         localStorage.setItem("articles", JSON.stringify(articles));
         alert("削除しました！");
-        location.href = "index.html";
+        location.href = "drafts.html";
       }
     });
   </script>
